--- a/Pacifice-Website/Areas/Admin/Views/Category/Create.cshtml
+++ b/Pacifice-Website/Areas/Admin/Views/Category/Create.cshtml
@@ -6,7 +6,7 @@
 <h1>Create</h1>
 
 
-<form asp-action="Create" method="post" enctype="multipar">
+<form asp-action="Create" method="post" >
     <div class="border p-4 rounded">
         <h1 class="text-center text-danger mb-4">Create New Category</h1>
 
