--- a/Pacifice-Website/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Pacifice-Website/Areas/Admin/Views/Product/Edit.cshtml
@@ -120,7 +120,7 @@
                                         <div class="form-group">
                                             <label >Product Image</label>
                                             <div class="custom-file">
-                                                <input class="custom-file-input form-control ml-2" p multiple asp-for="Image" />
+                                                <input class="custom-file-input form-control ml-2"   asp-for="Image" />
                                                 <label class="custom-file-label">Choos file</label>
                                             </div>
                                         </div>
