--- a/Pacifice-Website/Areas/Admin/Views/Product/Create.cshtml
+++ b/Pacifice-Website/Areas/Admin/Views/Product/Create.cshtml
@@ -114,7 +114,7 @@
                                 <div class="form-group">
                                     <label >Product gallery Images</label>
                                     <div class="custom-file">
-                                        <input class="custom-file-input form-control ml-2"  multiple asp-for="Image" />
+                                        <input class="custom-file-input form-control ml-2"  multiple asp-for="Images" />
                                         <label class="custom-file-label">Choos file</label>
                                     </div>
                                 </div>
@@ -123,7 +123,7 @@
                                 <div class="form-group">
                                     <label>Product Image</label>
                                     <div class="custom-file">
-                                        <input class="custom-file-input form-control ml-2" type="file" asp-for="Images" />
+                                        <input class="custom-file-input form-control ml-2" type="file" asp-for="Image" />
                                         <label class="custom-file-label">Choos file</label>
                                     </div>
                                 </div>
