--- a/Pacifice-Website/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Pacifice-Website/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,73 +4,63 @@
     ViewData["Title"] = "Register";
 }
 
-<div class="hero">
-    <div class="form-box">
-        <div class="button-box">
+
+  
             <div class="row">
                 <div class="col-md-11 offset-md-1">
-                    <h4 class="text-dark text-center mr-2">Create a new account</h4>
-                    <hr />
                     <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="row">
-                            <div class="col-md-5">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label asp-for="Input.FullName"></label>
-                                    <input asp-for="Input.FullName" class="form-control" />
+                                    <input asp-for="Input.FullName"  />
                                     <span asp-validation-for="Input.FullName" class="text-danger"></span>
                                 </div>
                             </div>
-                            <div class="col-md-5">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label asp-for="Input.UserName"></label>
-                                    <input asp-for="Input.UserName" class="form-control" />
+                                    <input asp-for="Input.UserName"  />
                                     <span asp-validation-for="Input.UserName" class="text-danger"></span>
                                 </div>
                             </div>
                         </div>
 
                         <div class="row">
-                            <div class="col-md-5">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label asp-for="Input.Email"></label>
-                                    <input asp-for="Input.Email" class="form-control" />
+                                    <input asp-for="Input.Email"  />
                                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                                 </div>
                             </div>
-                            <div class="col-md-5">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label asp-for="Input.Password"></label>
-                                    <input asp-for="Input.Password" class="form-control" />
+                                    <input asp-for="Input.Password"  />
                                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-5">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label asp-for="Input.ConfirmPassword"></label>
-                                    <input asp-for="Input.ConfirmPassword" class="form-control" />
+                                    <input asp-for="Input.ConfirmPassword"  />
                                     <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-5 offset-md-4 mb-2">
-                                <button type="submit" class="btn btn-primary">Register</button>
+                            <div class="col-md-5 offset-md-3 mb-5">
+                                <button type="submit" class="submit-btn">Register</button>
                             </div>
                         </div>
 
                     </form>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-
-
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
