--- a/Pacifice-Website/Areas/Admin/Views/Product/Create.cshtml
+++ b/Pacifice-Website/Areas/Admin/Views/Product/Create.cshtml
@@ -179,7 +179,7 @@
                     fileLabel.html(files.length + 'file selected')
                 }
                 else if (files.length == 1) {
-                    fileLabel.html(fileLabel[0].name)
+                    fileLabel.html(files[0].name)
                 }
             });
         });
