--- a/Pacifice-Website/Views/Shared/_ButtonPartial.cshtml
+++ b/Pacifice-Website/Views/Shared/_ButtonPartial.cshtml
@@ -6,4 +6,5 @@
 <td style="width:200px">
         <a class=" btn-success btn btn-sm" asp-action="Edit" asp-route-id="@Model"><i class="far fa-edit"></i></a>
         <a class=" btn-danger btn btn-sm" asp-action="Delete" asp-route-id="@Model"><i class="fas fa-trash-alt"></i></a>
+        <a class=" btn-danger btn btn-sm" asp-action="Details" asp-route-id="@Model"><i class="fas fa-list-ul"></i></a>
 </td>
