--- a/Pacifice-Website/Areas/Admin/Views/Account/CreateRole.cshtml
+++ b/Pacifice-Website/Areas/Admin/Views/Account/CreateRole.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "CreateRole";
 }
 
-<form asp-action="CreateRole" asp-controller="Acc" method="post">
+<form asp-action="CreateRole" asp-controller="Account" method="post">
     <div class="row">
         <div class="col-md-12">
             <div class="card mb-4">
@@ -12,23 +12,26 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-10 offset-md-2">
+                    <div class="col-md-8 offset-md-4">
                         <div class="row">
                             <div class="col-md-5">
                                 <div class="form-group">
+                                    <label class="text-success">@TempData["msg"]</label>
                                     <label class="text-white">Role Name</label>
                                     <input type="text" name="RoleName" value="" class="form-control" />
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <div class="col-md-8 offset-md-4 ">
-                                <button type="submit" class="btn btn-danger">Create Role</button>
-                                <a asp-controller="Product" asp-action="Index" class="btn btn-warning ml-1">Back To List</a>
-                            </div>
-                        </div>
+                    </div>
+
+                </div>
+                <div class="form-group row">
+                    <div class="col-md-3 offset-md-4 ">
+                        <button type="submit" class="btn btn-sm btn-danger ml-5">Create Role</button>
+                        <a asp-controller="Product" asp-action="Index" class="btn btn-warning  btn-sm ml-1">Back To List</a>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
