--- a/Pacifice-Website/Areas/Admin/Views/Category/Delete.cshtml
+++ b/Pacifice-Website/Areas/Admin/Views/Category/Delete.cshtml
@@ -2,28 +2,47 @@
 @{
     ViewData["Title"] = "Delete";
 }
+   
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card shadow mb-4">
+                    <div class="card-header bg-info">
+                        <span class=" text-white font-weight-normal"><b>Delete Category </b></span>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-8 offset-md-4">
+                            <div class="form-group row">
+                                <div class="col-md-5">
+                                    <label asp-for="Name"></label>
+                                    <input readonly="readonly" asp-for="Name" class="form-control" />
+                                    <span asp-validation-for="Name"></span>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-5">
+                                    <label asp-for="Status"></label>
+                                    <input onclick="return false;" asp-for="Status" type="checkbox" />
+                                </div>
+                            </div>
 
-<div class="border p-4 rounded">
-    <div asp-validation-summary="ModelOnly"></div>
-    <div class="row">
-        <div class="col-md-8">
-            <div class="form-group row">
-                <div class="col-md-5">
-                    <label asp-for="Name"></label>
-                    <input readonly="readonly" asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name"></span>
+                        </div>
+                    </div>
+                    <form asp-action="Delete" method="post">
+                        <div class="row">
+                            <div class="col-md-3 offset-md-4 ">
+                                <div class="form-group">
+                                    <input type="hidden" asp-for="Id" />
+                                    <button class="btn btn-sm btn-danger" type="submit">Delete</button>
+                                    <a asp-action="Index" class="btn btn-sm btn-info">Back To List</a>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
-            <div class="form-group row">
-                <form asp-action="Delete" method="post">
-                    <input type="hidden" asp-for="Id" />
-                    <button class="btn btn-danger" type="submit">Delete</button>
-                    <a asp-action="Index" class="btn btn-dark">Back To List</a>
-                </form>
-            </div>
         </div>
-    </div>
-</div>
+  
+
 @section Scripts{
     @{
         await Html.RenderPartialAsync(partialViewName: "_ValidationScriptsPartial.cshtml");
