--- a/Pacifice-Website/Areas/Admin/Views/Category/Details.cshtml
+++ b/Pacifice-Website/Areas/Admin/Views/Category/Details.cshtml
@@ -2,23 +2,42 @@
 @{
     ViewData["Title"] = "Details";
 }
+<div class="row">
+    <div class="col-md-12">
+        <div class="card shadow mb-4">
+            <div class="card-header bg-info">
+                <span class=" text-white font-weight-normal"><b> Category Detail </b></span>
+            </div>
+            <div class="row">
+                <div class="col-md-8 offset-md-4">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <div class="form-group ">
+                                <input type="hidden" asp-for="Id" />
+                                <label asp-for="Name"></label>
+                                <input readonly="readonly" asp-for="Name" class="form-control" />
+                                <span asp-validation-for="Name"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div row>
+                        <div class="col-md-5">
+                            <div class="form-group ">
 
+                                <label asp-for="Status"></label>
+                                <input readonly onclick="return false;" asp-for="Status" type="checkbox" />
+                            </div>
+                        </div>
+                    </div>
 
-<div class="border p-4 rounded">
-    <div asp-validation-summary="ModelOnly"></div>
-    <div class="row">
-        <div class="col-md-8">
-            <div class="form-group row">
-                <div class="col-md-5">
-                    <label asp-for="Name"></label>
-                    <input readonly="readonly" asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name"></span>
                 </div>
             </div>
-            <div class="form-group row">
-                <div class="col-md-8">
-                    <a class="btn btn-info" asp-action="Edit">Edit</a>
-                    <a asp-action="Index" class="btn btn-info" type="submit">Back To List</a>
+            <div class="row">
+                <div class="col-md-3 offset-md-4 ">
+                    <div class="form-group ">
+                        <button class="btn btn-success btn btn-sm" type="submit">Edit</button>
+                        <a asp-action="Index" class="btn btn-sm btn-info" type="submit">Back To List</a>
+                    </div>
                 </div>
             </div>
         </div>
