--- a/Pacifice-Website/Areas/Admin/Views/Category/Edit.cshtml
+++ b/Pacifice-Website/Areas/Admin/Views/Category/Edit.cshtml
@@ -3,39 +3,49 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+
+
 
 <form asp-action="Edit" method="post">
-    <div class="border p-4 rounded">
-        <div class="row">
-            <div class="col-md-8">
-                <div asp-validation-summary="ModelOnly"></div>
-                <div class="form-group row">
-                    <div class="col-md-5">
-                        <input type="hidden" asp-for="Id" />
-                        <label asp-for="Name"></label>
-                        <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name"></span>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card shadow mb-4">
+                <div class="card-header bg-info">
+                    <span class=" text-white font-weight-normal"><b>Edit Category </b></span>
+                </div>
+                <div class="row">
+                    <div class="col-md-8 offset-md-4">
+                        <div class="row">
+                            <div class="col-md-5">
+                                <div class="form-group ">
+                                    <input type="hidden" asp-for="Id" />
+                                    <label asp-for="Name"></label>
+                                    <input asp-for="Name" class="form-control" />
+                                    <span asp-validation-for="Name"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div row>
+                            <div class="col-md-5">
+                                <div class="form-group ">
+
+                                    <label asp-for="Status"></label>
+                                    <input asp-for="Status" type="checkbox" />
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
-                <div class="form-group row">
-                    <div class="col-md-5">
-                        <label asp-for="Status"></label>
-                        <input  asp-for="Status" type="checkbox" class="form-control" />
-                        
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-md-8">
-                        <button class="btn btn-info" type="submit">UpDate</button>
-                        <a asp-action="Index" class="btn btn-info" type="submit">Back To List</a>
+                <div class="row">
+                    <div class="col-md-3 offset-md-4 ">
+                        <div class="form-group ">
+                            <button class="btn btn-success btn btn-sm" type="submit">UpDate</button>
+                            <a asp-action="Index" class="btn btn-info btn btn-sm" type="submit">Back To List</a>
+                        </div>
                     </div>
                 </div>
             </div>
-           
         </div>
-
     </div>
-
 </form>
-
