--- a/Pacifice-Website/Areas/Admin/Views/Product/Index.cshtml
+++ b/Pacifice-Website/Areas/Admin/Views/Product/Index.cshtml
@@ -9,8 +9,8 @@
 <div class="row">
     <div class="col-md-12">
         <div class="card mb-4">
-            <div class="card-header">
-                <span class=" text-warning font-weight-normal"><b>Manage Product </b></span>
+            <div class="card-header bg-info ">
+                <span class=" text-white font-weight-normal"><b>Manage Product </b></span>
             </div>
             <div class="table-responsive">
                 @if (Model != null)
