--- a/Pacifice-Website/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Pacifice-Website/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -3,23 +3,38 @@
 @{
     ViewData["Title"] = "Forgot your password?";
 }
+<div class="row">
+    <div class="col-md-11 offset-md-1">
+        <h5 class="text-white text-center">@ViewData["Title"]</h5> 
+        <form method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="row">
+                <div class="col-md-10">
+                    <div class="form-group1">
+                        <label asp-for="Input.Email"></label>
+                        <input asp-for="Input.Email" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 offset-md-3 mb-5">
 
-<h1>@ViewData["Title"]</h1>
+                    <button type="submit" class="submit-btn mt-2">Save</button>
+
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+@*<h1>@ViewData["Title"]</h1>
 <h4>Enter your email.</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+     
     </div>
-</div>
+</div>*@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
