--- a/Pacifice-Website/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Pacifice-Website/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Forgot password confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
+<h1 class="text-white">@ViewData["Title"]</h1>
+<p class="text-white">
     Please check your email to reset your password.
 </p>
 
