--- a/Pacifice-Website/Views/Shared/_AdminLayout.cshtml
+++ b/Pacifice-Website/Views/Shared/_AdminLayout.cshtml
@@ -16,7 +16,9 @@
               crossorigin="anonymous"
               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
     </environment>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
@@ -26,7 +28,7 @@
             <a href="#" class="nav-link"> <i class="fas fa-bars nav-icon"></i></a>
         </label>
         <a href="#" class="navbar-brand">
-            <h3>Spacific <span>Export</span></h3>
+            <h3>Pacific <span>Export</span></h3>
         </a>
 
         <label class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,14 +48,26 @@
         <div class="sideMenu bg-mattBlackLight">
             <div class="sidebar">
                 <ul class="navbar-nav">
-                    <li class="nav-item"> <a asp-area="Admin" asp-controller="Product" asp-action="Index" class="nav-link"><i class="fab fa-windows icon"></i><span class="text">Dashboard</span></a></li>
-                    <li class="nav-item"> <a asp-area="Admin" asp-controller="Product" asp-action="Create" class="nav-link"><i class="fas fa-user icon"></i><span class="text">User</span></a></li>
-                    <li class="nav-item">  <a asp-area="Admin" asp-controller="Product" asp-action="Create" class="nav-link"><i class="fas fa-user icon"></i><span class="text">Product</span></a></li>
-                    <li class="nav-item"> <a asp-area="Admin" asp-controller="Category" asp-action="Create" class="nav-link"><i class="fas fa-list-alt icon"></i><span class="text">Category</span></a></li>
-                    <li class="nav-item"> <a href="#" class="nav-link"><i class="fas fa-user-tag icon"></i><span class="text">Role</span></a></li>
+                    @*<li class="nav-item"> <a asp-area="Admin" asp-controller="Product" asp-action="Index" class="nav-link"><i class="fab fa-windows icon"></i><span class="text">Dashboard</span></a></li>*@
+                    <li class="nav-item"> <a asp-area="Admin" asp-controller="Account" asp-action="RegisteredUserIndex" class="nav-link"><i class="fas fa-user icon"></i><span class="text">User</span></a></li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+                        <a href="#" class="nav-link prod prod-btn"><i class="fas fa-car icon"></i><span class="text">Product</span><span class="fas fa-caret-down ml-1 down first"></span></a>
+                        <ul class="prod-show">
+                            <li><a asp-area="Admin" asp-controller="Product" asp-action="Create" class="text-decoration-none hide">Add Product</a></li>
+                            <li><a asp-area="Admin" asp-controller="Product" asp-action="Index" class="text-decoration-none hide">Product List</a></li>
+                        </ul>
                     </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link prod cat-btn"><i class="fas fa-align-right icon"></i><span class="text">Category</span><span class="fas fa-caret-down ml-1 down second"></span></a>
+                        <ul class="cat-show">
+                            <li><a asp-area="Admin" asp-controller="Category" asp-action="Create" class="text-decoration-none hide">Add Category</a></li>
+                            <li><a asp-area="Admin" asp-controller="Category" asp-action="Index" class="text-decoration-none hide">Category List</a></li>
+                        </ul>
+                    </li>
+                 
+                    @*<li class="nav-item"> <a asp-area="Admin" asp-controller="Account" asp-action="CreateRole" class="nav-link"><i class="fas fa-user-tag icon"></i><span class="text">Create Role</span></a></li>*@
+                    <li class="nav-item"> <a asp-area="Admin" asp-controller="Account" asp-action="AssignRole" class="nav-link"><i class="far fa-address-book icon"></i><span class="text">Assign Role</span></a></li>
+                    @*<li class="nav-item"> <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a></li>*@
                 </ul>
             </div>
         </div>
